Fixed responsiveness on mobile

--- a/planet/style.css
+++ b/planet/style.css
@@ -243,9 +243,10 @@ img {
 
   .content {
     position: relative;
-    max-width: 90vw;
-    padding: 0;
-    font-size: 14px;
+    max-width: 100vw;
+    margin: 2.5px;
+    padding: 10px;
+    font-size: 12px;
   }
 
   .node1 {
